Changelog
=========

1.3.1 (unreleased)
------------------

- Fix display issue with FileChunk instances after upgrading Plone from
  4.2.x to Plone 4.3.2.
  Reported in https://github.com/4teamwork/ftw.subsite/issues/39
  [mathias.leimgruber]


1.3.0 (2013-09-24)
------------------

- Added browserview returning available languages.
  [Julian Infanger]

- Refactor the language selector to be a "actionMenu" instead of a linklist
  and show the language selector on the site root too, when subsites are
  configured to show the site root as language.
  [jone]

- Fixed problem if the subsite logo is deleted.
  [Julian Infanger]

- Hide banner viewlet from folder_contents when root_only option enabled.
  [jone]


1.2.0 (2013-07-02)
------------------

- Add checkbox for showing Plone Site in language switcher.
  [jone]

- Added css-class to subsite logo.
  [Julian Infanger]

- Use native languagename for languageswitcher.
  [tschanzt]


1.1.4 (2013-06-04)
------------------

- Use SitemapQueryBuilder not NavtreeQueryBuilder for sitemap customization.
  [mathias.leimgruber]


1.1.3 (2013-06-04)
------------------

- Fix performance issue while rendering the teaser portlet.
  [mathias.leimgruber]

1.1.2 (2013-06-04)
------------------

- Make sitemap work relative to a subsite and plone root.
  [mathias.leimgruber]

- Set input/output mime type of the addition_css text area to text/plain.
  Also return the addional_css as structured text.
  [mathias.leimgruber]


1.1.1 (2013-06-03)
------------------

- Use logo image scale for logo instead of mini.
  [Julian Infanger]

- Updated translations for teaser portlet.
  [Julian Infanger]


1.1 (2013-05-24)
----------------

- Move subsite css viewlet into plone.portaltop manager.
  [mathias.leimgruber]

- Use plone default reference widget to make references between
  subsites (lanaguage selector).
  [mathias.leimgruber]

- Find banner images recursively.
  [mathias.leimgruber]


1.0 (2013-04-17)
----------------
