@@ -2,6 +2,7 @@ from plone.app.layout.viewlets.common import LogoViewlet
 from plone.app.layout.navigation.root import getNavigationRoot
 from borg.localrole.interfaces import IFactoryTempFolder
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
+from Products.CMFCore.interfaces._content import IContentish
 
 
 class SubsiteLogoViewlet(LogoViewlet):
@@ -22,12 +23,15 @@ class SubsiteLogoViewlet(LogoViewlet):
         self.navigation_root_url = self.portal_state.navigation_root_url()
 
         subsite_logo = getattr(self.context, 'getLogo', None)
-        in_factory = IFactoryTempFolder.providedBy(
-            self.context.aq_inner.aq_parent)
+        parent = self.context.aq_inner.aq_parent
+        in_factory = IFactoryTempFolder.providedBy(parent)
 
         if subsite_logo and subsite_logo() and not in_factory:
             # we are in a subsite
-            navigation_root_path = self.portal_state.navigation_root_path()
+            context = self.context
+            if not IContentish.providedBy(context):
+                context = context.aq_parent
+            navigation_root_path = getNavigationRoot(context)
             scale = portal.restrictedTraverse(
                 navigation_root_path + '/@@images')
             # XXX Use own scale
