@@ -4,6 +4,9 @@ Changelog
 1.3.1 (unreleased)
 ------------------
 
+- Fix Subsitelogoviewlet when the context are portal tools.
+  [tschanzt]
+
 - Fix display issue with FileChunk instances after upgrading Plone from
   4.2.x to Plone 4.3.2.
   Reported in https://github.com/4teamwork/ftw.subsite/issues/39
